<resources>
    <string name="app_name">Suit Case</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="re_password">Re-Password</string>
    <string name="login">Login</string>
    <string name="new_user">New User</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="username_is_blank">The user name is blank.</string>
    <string name="username_exist">This account exist.</string>
    <string name="passwords_not_match">Passwords do not match.</string>
    <string name="account_error">The username or the password is error.</string>
    <string name="item_title">Title</string>
    <string name="item_price">Price</string>
    <string name="item_desc">Description</string>
    <string name="item_title_hint">Enter a title for the item.</string>
    <string name="item_price_hint">Enter a price for the item.</string>
    <string name="item_desc_hint">Enter a description for the item.</string>
    <string name="item_solved_text">Solved</string>
    <string name="item_share_text">Share the item</string>
    <string name="item_report">%1$s! The price is $%2$s, and %3$s</string>
    <string name="item_report_solved">it is bought.</string>
    <string name="item_report_unsolved">it is not bought yet.</string>
    <string name="item_report_subject">Suit Case Message</string>
    <string name="send_report">Send suit case message via</string>
    <string name="new_item">New Item</string>
    <string name="del_item">Delete Item</string>
</resources>